<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/value_16_dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends"
        android:textSize="@dimen/value_18_sp"
        android:layout_gravity="center_horizontal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/value_16_dp">

        <TextView
            android:id="@+id/firstFriendTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_to_all_friends"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:paddingEnd="@dimen/value_16_dp"/>

        <Switch
            android:id="@+id/firstFriendSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="@dimen/value_16_dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_300dp"
        android:layout_marginTop="@dimen/value_16_dp"
        tools:listitem="@layout/item_friend"/>


    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_60_dp"
        android:layout_marginTop="@dimen/value_32_dp"
        style="@style/ButtonStyle"
        android:text="@string/close"
        android:layout_gravity="bottom"/>

</LinearLayout>